--- a/matamong_project/pyproject.toml
+++ b/matamong_project/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.104.0"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 pydantic = "^2.4.2"
 pydantic-settings = "^2.0.3"
+sqlalchemy = "^2.0.23"
 
 
 [build-system]
